Example for relative branch links
file should be in same directory and follow: [link to show](exact_file_name.md)

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -55,3 +55,7 @@ These individual additional points should be about one to two paragraphs long. I
 ### ISIC mapping example (MEX)
 
 The Mexican INEGI codes industry in the ENE based on the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4) to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here]( https://github.com/worldbank/gld/blob/d648b91e523e72f1fa90bf5cf799252b94c8bd05/Support/Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
+
+### Other Documentation Files 
+If we want to link to other documentation files in the same directory, the issue is that we cannot use the permalink web address because eventually the document will change branches, and the link will change. However, GitHub have allowed for [this solution](https://github.blog/2013-01-31-relative-links-in-markup-files/), which involves relative linking. As long as the Introduction and linked files are in the same directory, simply follow the example below and the relative link will always link to the file no matter what branch the files are on: 
+[GLD Code Template](GLD_Harmonization_Template.do)
