Update 1. Introduction to [Survey Acronym].md

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -58,4 +58,4 @@ The Mexican INEGI codes industry in the ENE based on the North American Industry
 
 ### Other Documentation Files 
 If we want to link to other documentation files in the same directory, the issue is that we cannot use the permalink web address because eventually the document will change branches, and the link will change. However, GitHub have allowed for [this solution](https://github.blog/2013-01-31-relative-links-in-markup-files/), which involves relative linking. As long as the Introduction and linked files are in the same directory, simply follow the example below and the relative link will always link to the file no matter what branch the files are on: 
-[GLD Code Template](GLD_Harmonization_Template.do)
+- [GLD Code Template](GLD_Harmonization_Template.do)
