link to script in rmd
using relative links

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -8,7 +8,7 @@ The Indian Employment and Unemployment Survey (EUS) is the Indian Labour Force S
 
 ## What does the [CCC] [survey Acronym] cover?
 
-Short paragraph on the topics covered as well as information on the years and the sample sizes. Example:
+Short paragraph on the topics covered as well as information on the years and the sample sizes. One way to generate a table is to use the [Individual and Household ID tabulator tool in R](../Global/unique_hh_ind_obs.R) Example:
 
 The Indian EUS is a labour force survey collecting information on demographic details (age, sex, location), education (both academic and vocational), labour market activities over the past 12 months, as well as time use and activities over the previous 7 days. Some years contain further information on consumption expenditure. The years and sample size of EUS harmonized for GLD are:
 
