--- a/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -1,12 +1,50 @@
 Introduction to the Mexican Labour Force Survey (ENOE)
 ================
 
-## What is the data?
-The codes under the GLD/MEX folder contain harmonized data from 2005 to 2020 harmonize for the Mexican Labour Force and Unemployment Survey (ENOE).
+## What is the MEX ENOE?
+
+The Mexican Labour Force and Unemployment Survey (ENOE) is the Mexican Labour Force Survey run as part of Mexico’s National Surveys series from 2005 to 2020.
+
+## What does the MEX ENOE cover?
+
+The Mexican ENOE is a labour force survey collecting information on demographic details (age, sex, location), education (academic), social security, labour market activities over the past quarter, as well as time use and activities over the previous 7 days. The years and sample size of ENOE harmonized for GLD are:
+
+| Year	| # of Households	| # of Individuals	|
+| :-------	| :--------		| :--------	 	|
+| 2005	| 100,776	| 402,186	|
+| 2006	| 104,857	| 411,737	|
+| 2007	| 105,567	| 410,185	|
+| 2008	| 104,113	| 402,253	|
+| 2009	| 102,068	| 392,497	|
+| 2010	| 102,489	| 392,674	|
+| 2011	| 102,588	| 389,038	|
+| 2012	| 102,963	| 388,114	|
+| 2013	| 101,382	| 379,010	|
+| 2014	| 103,998	| 389,926	|
+| 2015	| 105,628	| 390,565	|
+| 2016	| 104,809	| 383,381	|
+| 2017	| 104,558	| 377,929 |
+| 2018	| 104,348	| 375,481 |
+| 2019	| 109,335	| 390,018 |
+| 2020	| 113,634	| 400,971 |
 
 ## Where can the data be found?
 
-The microdata is free and publicly available on the National Institute of Statistics and Geography (INEGI). INEGI created a [dedicated website](https://www.inegi.org.mx/programas/enoe/15ymas/#Microdatos) that records ENOE and all previous versions, besides it contains complete information to understand the framework of the ENOE.
+The microdata is free and publicly available on the National Institute of Statistics and Geography (INEGI). INEGI created a [dedicated website](https://www.inegi.org.mx/programas/enoe/15ymas/#Microdatos) that records ENOE and all previous versions, besides it contains complete information to understand the framework of the ENOE. Data from 2019 onwards can only be circulated within the World Bank. For further information kindly get in touch with the World Bank Jobs Group. 
+
+## What is the sampling procedure?
+
+The ENOE uses a stratified two-stage design. The ENOE introduction provides ample detail on the breakdown and goals (see webpage *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) outlines the sampling procedure as:
+
+[Translation from the original version]
+
+    The sampling is probabilistic, two-stage, stratified by conglomerates.
+
+    Observation unit: The House.
+    Sampling unit: The private home.
+    Analysis unit: The home and the residents of the dwelling. [...]
+
+    Sampling frame : The sampling frame used for the ENOE is INEGI's 2012 National Housing Framework, built from the cartographic and demographic information obtained during the 2010 Population and Housing Census, which is updated with each new census survey. [...]
 
 ## What is significance level?
 
@@ -67,6 +105,14 @@ the basic questionnaire versions.
 | ---------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- |
 | Questions about situation after losing a job and the length of unemployment or job inactivity. | Questions about migration and additional labor opportunities (second job).                                                       |
 |                                                                                                | Questions on financial, social and economic support such as syndicate enrollment, public social welfare benefits, and insurance. |
+
+### ISIC mapping (MEX)
+
+The Mexican INEGI codes industry in the ENOE based on the Mexican version of the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4), and to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here](../Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
+
+### ISCO mapping (MEX)
+
+The occupation categories are based on the Mexican Ocupations Classification (CMO). This system is very different from the international ISCO format. To map from CMO to ISCO (versions 68, 88 and 08), and to code `occup_isco`, a special procedure is needed. This process is detailed in a [separate document, available here](../Country%20Survey%20Details/MEX/ENOE/Correspondence_CMO_ISCO.md).
 
 — [Author made. based on ENOE
 Questionnaires](https://www.inegi.org.mx/programas/enoe/15ymas/)
