Update 1. Introduction to [Survey Acronym].md

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -38,7 +38,7 @@ The EUS uses a stratified multi-stage design. The 2009 manual (see document *Int
 
 Note that, even though the sampling logic is consitent over time, there are changes over time (e.g.m the blocks come from different censuses).
 
-## What is the geographic significane level?
+## What is the geographic significance level?
 
 Brief outline of to what level information in the survey can be aggregated and produce statistically significant results. Example:
 
