--- a/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -46,9 +46,9 @@ The ENOE uses a stratified two-stage design. The ENOE introduction provides ampl
 
     Sampling frame : The sampling frame used for the ENOE is INEGI's 2012 National Housing Framework, built from the cartographic and demographic information obtained during the 2010 Population and Housing Census, which is updated with each new census survey. [...]
 
-## What is significance level?
+## What is the geographic significance level?
 
-The results are reported by gender and geographic location (urban or rural). At the national level the information is reported for "localidades", federative unite and autorepresented cities. Furthere details can be found in the dedicated sample design of each survey year [report](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613).
+The results are at national, state, and *cities of interest* levels as well as for certain size categories of localities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports. The information on the 2019 ENOE can be found under section 3.3 (page 39/40) of [that year's report](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613).
 
 ## Other Noteworthy Aspects
 
