adding images and deleting redundancies

--- a/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -34,9 +34,25 @@ The microdata is free and publicly available on the National Institute of Statis
 
 ## What is the sampling procedure?
 
-The ENOE uses a stratified two-stage design. The ENOE introduction provides ample detail on the breakdown and goals (see webpage *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) outlines the sampling procedure as:
+The ENOE uses a stratified two-stage design. The introductory section of ENOE provides ample detail on the breakdown and goals of the process. Below we share a sequence of images that will allow the user to access the information in the ENOE webpage. The text is in Spanish. Yet, we did a short summary in english at the bottom of this section to give the user a general idea of the information.  
 
-[Translation from the original version]
+
+Image 1. Steps to find the information in the webpage
+
+<br></br>
+![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro.PNG)
+<br></br>
+<br></br>
+![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro2.PNG)
+<br></br>
+<br></br>
+![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro3.PNG)
+<br></br>
+
+Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) 
+
+
+[Summarized Translation from the original version]
 
     The sampling is probabilistic, two-stage, stratified by conglomerates.
 
@@ -50,14 +66,7 @@ The ENOE uses a stratified two-stage design. The ENOE introduction provides ampl
 
 The results are at national, state, and *cities of interest* levels as well as for certain size categories of localities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports. The information on the 2019 ENOE can be found under section 3.3 (page 39/40) of [that year's report](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613).
 
-## Other Noteworthy Aspects
-
-### The ENOE
-
-ENOE or "Encuesta Nacional de Ocupación y Empleo" is a national
-survey that records labor information from the Mexican population. The
-Survey is conducted quarterly with two different questionnaires 
-i.e., extended and basic versions. 
+## Other Noteworthy Aspects 
 
 ### Evolution of the ENOE questionnaires
 
@@ -109,10 +118,6 @@ the basic questionnaire versions.
 ### ISIC mapping (MEX)
 
 The Mexican INEGI codes industry in the ENOE based on the Mexican version of the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4), and to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here](../Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
-
-### ISCO mapping (MEX)
-
-The occupation categories are based on the Mexican Ocupations Classification (CMO). This system is very different from the international ISCO format. To map from CMO to ISCO (versions 68, 88 and 08), and to code `occup_isco`, a special procedure is needed. This process is detailed in a [separate document, available here](../Country%20Survey%20Details/MEX/ENOE/Correspondence_CMO_ISCO.md).
 
 — [Author made. based on ENOE
 Questionnaires](https://www.inegi.org.mx/programas/enoe/15ymas/)
