--- a/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -38,20 +38,15 @@ The ENOE uses a stratified two-stage design. The introductory section of ENOE pr
 
 
 Image 1. Steps to find the information in the webpage
-
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro.PNG)
+![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro.png)
 <br></br>
-
+![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro2.png)
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro2.PNG)
 <br></br>
-
+![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro3.png)
 <br></br>
-![](/Support/Country%20Survey%20Details/MEX/ENOE/utilities/ENOE_intro3.PNG)
-<br></br>
-
-Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) 
+Reference: Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) 
 
 
 [Summarized Translation from the original version]
