--- a/Support/Country Survey Details/PHL/LFS/Rmd/weights_methodology.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/weights_methodology.Rmd
@@ -83,7 +83,7 @@ will need to be done. Let's take a look.
 ```{r}
 sum.w.a <- phl %>%
   group_by(year, wave) %>%
-  summarise(weight = median(weight, na.rm = TRUE))
+  summarise(weight = round(median(weight, na.rm = TRUE)))
 sum.w.a
 ```
 
@@ -99,8 +99,9 @@ phl2 <- phl %>%
                         (lstatus == 3) ~ FALSE ),
     weight2= case_when( year <= 2004 ~ weight / 10000,
                         year == 2005 & (wave == "Q1" | wave == "Q2") ~ weight / 10000,
+                        year == 2006 ~ weight / 10000,
                         year == 2007 & (wave == "Q1") ~ weight / 10000,
-                        TRUE         ~ weight)) 
+                        TRUE         ~ weight))  
 ```
 
 #### Update the weights summary object
@@ -113,7 +114,7 @@ and add it to the `sum.w.a`.
 # create `weight_corrected` vector
 weight.adj <- phl2 %>%
   group_by(year, wave) %>%
-  summarise(weight_corrected = median(weight2, na.rm = TRUE))
+  summarise(weight_corrected = round(median(weight2, na.rm = TRUE)))
 
 weight.adj
 ```
@@ -274,4 +275,6 @@ gg <- ggplot(sum.15.y, aes(year, dif_pop_15up)) +
        y = "Error %",
        x = "Year") +
   theme_minimal()
+
+gg
 ```
