--- a/Support/Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -101,4 +101,4 @@ disaggregation,
 
 [Industry and Occupation Codes](Industry_Occupation_Codes.md)
 
-[Weights Variables Checks](Weights_PSA_Checks.md)
+[Weights, Population, Labor Force Participation Checks and Methodology](weights_methodology.html)
