--- a/Support/Country Survey Details/PHL/LFS/Rmd/weights_methodology.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/weights_methodology.Rmd
@@ -63,6 +63,18 @@ calculated, and checked these three figures. Since we use a script-based
 approach instead of a notebook-based approach, this code is an adapted
 version of [population_lfp.R](/Support/Global/population_lfp.R).
 
+### A note on our data
+
+The Philippines Labor Force Survey generally consists of four rounds per
+year. The GLD data use all four rounds when available; however, for
+years 1998-2001, we only have the first round of data (January).
+Therefore, you will see below that for these years the appropriate
+mathematical adjustments have been made to account for the fact that we
+are only using one round. However, our final yearly indicators of
+magnitude (i.e., population) in 1998-2001 will naturally be much lower
+than the figures the PSA publishes since we only use about one quarter
+of the data.
+
 ### External Sources
 
 All PSA figures have been referred to at either:
@@ -249,10 +261,10 @@ sum.15.y <- sum.15.y %>%
       year == "2004" ~ mean(c(63.8, 64.1, 65.4, 64.1)),
       year == "2003" ~ mean(c(64.5, 63.5, 64.0, 63.3)),
       year == "2002" ~ mean(c(63.9, 64.4, 66.3, 64.3)),
-      year == "2001" ~ mean(c(65.3, 64.2, 65.6, 62.6)),
-      year == "2000" ~ mean(c(61.7, 60.9, 62.2, 62.7)),
-      year == "1999" ~ mean(c(63.3, 63.3, 66.1, 63.1)),
-      year == "1998" ~ mean(c(63.3, 62.7, 64.4, 62.7)),
+      year == "2001" ~ mean(c(62.6)), #only use Q1
+      year == "2000" ~ mean(c(62.7)), #only use Q1
+      year == "1999" ~ mean(c(63.1)), #only use Q1
+      year == "1998" ~ mean(c(62.7)), #only use Q1
       year == "1997" ~ mean(c(63.1, 63.2, 65.5, 63.3))
     ),
     psa_pop_15up = case_when(
@@ -274,16 +286,18 @@ sum.15.y <- sum.15.y %>%
       year == "2004" ~ 53562000,
       year == "2003" ~ 52305000,
       year == "2002" ~ 50841000,
-      year == "2001" ~ 49424000,
-      year == "2000" ~ 48076000,
-      year == "1999" ~ 46749000,
-      year == "1998" ~ 45425000,
+      year == "2001" ~ 48413000, #Q1 population data
+      year == "2000" ~ 47185000, #Q1 population data
+      year == "1999" ~ 45852000, #Q1 population data
+      year == "1998" ~ 44517000, #Q1 population data
       year == "1997" ~ 44143000
     ),
     dif_pop_15up = pop_15up - psa_pop_15up,
     dif_lfp_15up = lfp_15up - psa_lfp_15up,
-    flag_pop_5pct= ((dif_pop_15up/pop_15up) >= 0.05),
-    flag_lfp_2pct= ((dif_lfp_15up/lfp_15up) >= 0.02)
+    err_pop_15up = (dif_pop_15up/pop_15up),
+    err_lfp_15up = (dif_lfp_15up/lfp_15up),
+    flag_pop_5pct= (err_pop_15up >= 0.05),
+    flag_lfp_2pct= (err_lfp_15up >= 0.02)
   ) 
 
 ```
@@ -306,11 +320,11 @@ magnitude and more than ratios.
 We can visualize our final results below
 
 ```{r}
-gg.pop <- ggplot(sum.15.y, aes(year, dif_pop_15up)) +
+gg.pop <- ggplot(sum.15.y, aes(year, err_pop_15up)) +
   geom_col(aes(fill = flag_pop_5pct)) +
-  scale_y_continuous(labels = scales::label_number(), limits = c(0,10000000)) +
-  labs(title = "Aboslute Error in GLD vs PSA Popupation 15yrs and Older",
-       y = "Absolute Error",
+  scale_y_continuous(labels = scales::label_percent(), limits = c(0,1)) +
+  labs(title = "Relative Error in GLD vs PSA Popupation 15yrs and Older",
+       y = "Relative Error",
        x = "Year") +
   theme_minimal()
 
@@ -318,11 +332,11 @@ gg.pop
 ```
 
 ```{r}
-gg.lfp <- ggplot(sum.15.y, aes(year, dif_lfp_15up)) +
+gg.lfp <- ggplot(sum.15.y, aes(year, err_lfp_15up)) +
   geom_col(aes(fill = flag_lfp_2pct)) +
-  scale_y_continuous(labels = scales::label_number(), limits = c(-1, 10)) +
-  labs(title = "Aboslute Error in GLD vs PSA Labor Force Participation 15yrs and Older",
-       y = "Absolute Error in pct points",
+  scale_y_continuous(labels = scales::label_percent(), limits = c(-1, 1)) +
+  labs(title = "Relative Error in GLD vs PSA Labor Force Participation 15yrs and Older",
+       y = "Relative Error",
        x = "Year") +
   theme_minimal()
 
